[package]
name = "game"
version = "0.1.0"
authors = ["RegenJacob <RegenJacob@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.0"
egui_glium = "0.13.1"
egui = "0.13.1"
glam = "0.17.1"
tinyfiledialogs = "3.8.3"